# core

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  CODEOWNERS  COMMANDS.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  deny.toml
.cargo/: config.toml
vauchi-cli/: CLAUDE.md  Cargo.toml  README.md  STRUCTURE.md
vauchi-cli/src/: config.rs  display.rs  main.rs  protocol.rs
vauchi-cli/src/commands/: backup.rs  card.rs  contacts.rs  device.rs  exchange.rs  init.rs  labels.rs  mod.rs  recovery.rs  sync.rs
vauchi-cli/tests/: cli_integration_tests.rs
vauchi-core/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  STRUCTURE.md
vauchi-core/benches/: crypto_benchmarks.rs
vauchi-core/src/: aha_moments.rs  demo_contact.rs  help.rs  i18n.rs  lib.rs  theme.rs
vauchi-core/src/api/: account.rs  config.rs  consent.rs  contact_manager.rs  error.rs  events.rs  gdpr.rs  mod.rs  sync_controller.rs  vauchi.rs
vauchi-core/src/contact/: labels.rs  merge.rs  mod.rs  visibility.rs
vauchi-core/src/contact_card/: field.rs  mod.rs  uri.rs  validation.rs  vcard.rs
vauchi-core/src/content/: cache.rs  config.rs  fetcher.rs  integrity.rs  manager.rs  mod.rs  types.rs
vauchi-core/src/crypto/: chain.rs  encryption.rs  kdf.rs  mod.rs  password_kdf.rs  ratchet.rs  signing.rs
vauchi-core/src/exchange/: audio.rs  audio_cpal.rs  ble.rs  device_link.rs  encrypted_message.rs  error.rs  mod.rs  nfc.rs  proximity.rs  qr.rs  session.rs  x3dh.rs
vauchi-core/src/identity/: backup.rs  device.rs  mod.rs  password.rs
vauchi-core/src/network/: anonymous.rs  connection.rs  error.rs  message.rs  mock.rs  mod.rs  multi_relay.rs  pinning.rs  protocol.rs  relay_client.rs  simple_message.rs  transport.rs  websocket.rs
vauchi-core/src/recovery/: mod.rs
vauchi-core/src/social/: mod.rs  registry.rs  validation.rs
vauchi-core/src/storage/: consent.rs  contacts.rs  delivery.rs  device.rs  device_delivery.rs  error.rs  identity.rs  labels.rs  migration.rs  mod.rs  pending.rs  ratchet.rs  recovery.rs  retry.rs  secure.rs  ux.rs  validation.rs
vauchi-core/src/sync/: delta.rs  device_orchestrator.rs  device_sync.rs  merkle.rs  mod.rs  state.rs
vauchi-core/tests/: CROSS_PLATFORM_SYNC_COVERAGE_SUMMARY.md  VISIBILITY_COVERAGE_SUMMARY.md  aha_moments_integration_tests.rs  anonymous_sender_tests.rs  api_config_tests.rs  api_error_tests.rs  api_events_tests.rs  api_sync_controller_tests.rs  api_vauchi_tests.rs  ble_integration_tests.rs  clock_skew_tests.rs  concurrency_tests.rs  consent_storage_tests.rs  contact_card_coverage_tests.rs  contact_card_field_tests.rs  contact_card_tests.rs  contact_merge_tests.rs  contact_tests.rs  contact_visibility_tests.rs  cross_platform_sync_tests.rs  crypto_encryption_tests.rs  crypto_kdf_tests.rs  crypto_ratchet_tests.rs  crypto_signing_tests.rs  crypto_tests.rs  delivery_storage_tests.rs  demo_contact_integration_tests.rs  device_race_condition_tests.rs  edge_cases_tests.rs  encryption_coverage_tests.rs  error_handling_tests.rs  exchange_ble_tests.rs  exchange_e2e_tests.rs  exchange_edge_cases_tests.rs  exchange_encrypted_message_tests.rs  exchange_proximity_tests.rs  exchange_session_tests.rs  exchange_tests.rs  exchange_x3dh_tests.rs  field_validation_tests.rs  (+45 more)
vauchi-core/tests/common/: fixtures.rs  helpers.rs  mod.rs  strategies.rs
vauchi-core/tests/content/: cache_tests.rs  config_tests.rs  integrity_tests.rs  manager_tests.rs  mod.rs  registry_integration_tests.rs  types_tests.rs
vauchi-core/tests/e2e/: backup_e2e_test.rs  exchange_e2e_test.rs  mod.rs  sync_e2e_test.rs  visibility_e2e_test.rs
vauchi-core/tests/integration/: contact_workflow_test.rs  identity_workflow_test.rs  mod.rs  sync_workflow_test.rs
vauchi-mobile/: CLAUDE.md  Cargo.toml  README.md  STRUCTURE.md  uniffi-bindgen.rs
vauchi-mobile/benches/: ffi_benchmarks.rs
vauchi-mobile/src/: UDL_DEPRECATED.md  audio.rs  cert_pinning.rs  content.rs  error.rs  lib.rs  protocol.rs  sync.rs  types.rs  vauchi_mobile.udl
vauchi-mobile/tests/: FFI_COVERAGE_SUMMARY.md  ffi_boundary_tests.rs
vauchi-tui/: CLAUDE.md  Cargo.toml  README.md
vauchi-tui/src/: app.rs  backend.rs  lib.rs  main.rs
vauchi-tui/src/handlers/: input.rs
vauchi-tui/tests/: TUI_COVERAGE_SUMMARY.md  ui_interaction_tests.rs
webbook-cli/: Cargo.toml  README.md  STRUCTURE.md
webbook-cli/src/: config.rs  display.rs  main.rs  protocol.rs
webbook-core/: ARCHITECTURE.md  Cargo.toml  README.md  STRUCTURE.md
webbook-core/benches/: crypto_benchmarks.rs
webbook-core/src/: lib.rs
webbook-core/tests/: api_config_tests.rs  api_error_tests.rs  api_events_tests.rs  api_sync_controller_tests.rs  api_webbook_tests.rs  concurrency_tests.rs  contact_card_field_tests.rs  contact_card_tests.rs  contact_tests.rs  contact_visibility_tests.rs  crypto_encryption_tests.rs  crypto_kdf_tests.rs  crypto_ratchet_tests.rs  crypto_signing_tests.rs  crypto_tests.rs  edge_cases_tests.rs  error_handling_tests.rs  exchange_ble_tests.rs  exchange_encrypted_message_tests.rs  exchange_proximity_tests.rs  exchange_session_tests.rs  exchange_tests.rs  exchange_x3dh_tests.rs  fuzz_tests.rs  identity_device_tests.rs  identity_password_tests.rs  identity_tests.rs  integration_tests.rs  migration_tests.rs  network_error_tests.rs  network_message_tests.rs  network_mock_tests.rs  network_relay_client_tests.rs  network_simple_message_tests.rs  network_transport_tests.rs  property_tests.proptest-regressions  property_tests.rs  protocol_compatibility_tests.rs  ratchet_error_tests.rs  recovery_tests.rs  (+10 more)
webbook-desktop/src-tauri/: Cargo.toml  tauri.conf.json
webbook-mobile/: Cargo.toml  README.md  STRUCTURE.md
webbook-mobile/src/: cert_pinning.rs  error.rs  lib.rs  protocol.rs  sync.rs  types.rs
webbook-relay/: Cargo.toml  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml
webbook-relay/deploy/: DEPLOYMENT.md  install.sh
webbook-relay/src/: config.rs  connection_limit.rs  handler.rs  http.rs  main.rs  metrics.rs  rate_limit.rs  recovery_storage.rs  storage.rs
webbook-tui/: Cargo.toml  README.md
webbook-tui/src/: app.rs  backend.rs  main.rs
(+345 files in other folders)
