[workspace]
resolver = "2"
members = [
    "vauchi-core",
    "vauchi-mobile",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/vauchi/core"
authors = ["Vauchi Contributors"]

# Release profile: optimized for size (mobile binaries)
[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization (slower compile)
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols

# Development profile: fast compilation, good debugging
[profile.dev]
opt-level = 0        # No optimization
debug = true         # Full debug info

# Release with debug info (for profiling)
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# CI profile: faster builds with reasonable optimization
[profile.ci]
inherits = "release"
lto = "thin"          # Faster than full LTO, still good optimization
codegen-units = 16    # More parallelism during compilation
incremental = false   # CI builds are fresh, no benefit from incremental
