[package]
name = "vauchi-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Vauchi - privacy-focused contact card exchange"
license = "MIT"

[features]
default = ["network"]
network = ["tungstenite", "native-tls"]
secure-storage = ["keyring"]
# Enable this feature to expose internal modules for integration tests
testing = []

[dependencies]
# Cryptography (audited library)
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# QR code generation
qrcode = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
bincode = "1.3"

# Error handling
thiserror = "2.0"

# Random number generation
rand = "0.8"

# Base64 encoding for keys/backups
base64 = "0.22"

# Hex encoding for fingerprints
hex = "0.4"

# Zeroize sensitive data in memory
zeroize = { version = "1.8", features = ["derive"] }

# Password strength estimation
zxcvbn = "3"

# Database storage
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID generation for IDs
uuid = { version = "1.0", features = ["v4"] }

# WebSocket transport (optional, not needed for mobile)
tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
native-tls = { version = "0.2", optional = true }

# Platform keychain access (optional, for desktop apps)
keyring = { version = "3", optional = true }

[dev-dependencies]
# Temporary directories for storage tests
tempfile = "3.0"
# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.4"
# Benchmarking
criterion = "0.5"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
