[package]
name = "vauchi-mobile"
version = "0.1.0"
edition = "2021"
description = "Mobile bindings for Vauchi - UniFFI wrapper for Android/iOS"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "vauchi_mobile"

[dependencies]
# Core Vauchi library (with network features for sync)
vauchi-core = { path = "../vauchi-core" }

# UniFFI for cross-language bindings
uniffi = { version = "0.28", features = ["cli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Sync primitives for mobile
once_cell = "1.19"
parking_lot = "0.12"

# Base64 encoding for backups
base64 = "0.22"

# Hex encoding for public IDs
hex = "0.4"

# UUID for message IDs
uuid = { version = "1.0", features = ["v4"] }

# WebSocket for sync
tungstenite = { version = "0.24", features = ["native-tls"] }

# TLS for certificate pinning
native-tls = "0.2"

# URL parsing for certificate pinning
url = "2.5"

# Password strength checking
zxcvbn = "3.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3.0"
