[package]
name = "vauchi-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mobile bindings for Vauchi - UniFFI wrapper for Android/iOS"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "vauchi_mobile"

[dependencies]
# Core Vauchi library (with rustls for Android/iOS - no OpenSSL dependency)
vauchi-core = { path = "../vauchi-core", default-features = false, features = ["network-rustls"] }

# UniFFI for cross-language bindings
uniffi = { version = "0.28", features = ["cli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Sync primitives for mobile
once_cell = "1.19"
parking_lot = "0.12"

# Base64 encoding for backups
base64 = "0.22"

# Hex encoding for public IDs
hex = "0.4"

# UUID for message IDs
uuid = { version = "1.0", features = ["v4"] }

# WebSocket for sync (rustls for Android/iOS cross-compilation)
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-native-roots"] }

# TLS for certificate pinning (rustls with ring backend - no C compilation needed)
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.11"
webpki-roots = "0.26"

# URL parsing for certificate pinning
url = "2.5"

# Password strength checking
zxcvbn = "3.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "ffi_benchmarks"
harness = false
