[package]
name = "vauchi-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Vauchi - privacy-focused contact card exchange"
license = "MIT"

[features]
default = []
secure-storage = ["vauchi-core/secure-storage"]

[dependencies]
# Core library
vauchi-core = { path = "../vauchi-core" }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Directories for config
dirs = "5.0"

# QR code rendering
qrcode = "0.14"

# Hex encoding
hex = "0.4"

# Open URLs in system browser/app
open = "5"

# WebSocket for relay sync
tungstenite = { version = "0.24", features = ["native-tls"] }

# Serialization for protocol messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
