[package]
name = "webbook-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for WebBook"
license = "MIT"

[[bin]]
name = "webbook"
path = "src/main.rs"

[dependencies]
# Core library
webbook-core = { path = "../webbook-core" }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Interactive prompts
dialoguer = "0.11"

# Terminal styling
console = "0.15"

# Platform directories
dirs = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# QR code generation (re-export from webbook-core uses this)
qrcode = "0.14"
