[package]
name = "webbook-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for WebBook"
license = "MIT"

[[bin]]
name = "webbook"
path = "src/main.rs"

[dependencies]
# Core library
webbook-core = { path = "../webbook-core" }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Interactive prompts
dialoguer = "0.11"

# Terminal styling
console = "0.15"

# Platform directories
dirs = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# QR code generation (re-export from webbook-core uses this)
qrcode = "0.14"

# WebSocket client
tungstenite = "0.21"
url = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.21"
