[package]
name = "webbook-core"
version = "0.1.0"
edition = "2021"
description = "Core library for WebBook - privacy-focused contact card exchange"
license = "MIT"

[dependencies]
# Cryptography (audited library)
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# QR code generation
qrcode = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Random number generation
rand = "0.8"

# Base64 encoding for keys/backups
base64 = "0.22"

# Hex encoding for fingerprints
hex = "0.4"

# Zeroize sensitive data in memory
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
