[package]
name = "webbook-mobile"
version = "0.1.0"
edition = "2021"
description = "Mobile bindings for WebBook - UniFFI wrapper for Android/iOS"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "webbook_mobile"

[dependencies]
# Core WebBook library (without network features for mobile)
webbook-core = { path = "../webbook-core", default-features = false }

# UniFFI for cross-language bindings
uniffi = { version = "0.28", features = ["cli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Sync primitives for mobile
once_cell = "1.19"
parking_lot = "0.12"

# Base64 encoding for backups
base64 = "0.22"

# Hex encoding for public IDs
hex = "0.4"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dev-dependencies]
tempfile = "3.0"
