[package]
name = "webbook-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop app for WebBook - privacy-focused contact card exchange"
license = "MIT"

[lib]
name = "webbook_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core library
webbook-core = { path = "../../webbook-core" }

# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# QR code generation
qrcode = "0.14"

# Platform directories
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
